# misc

./: .bumpversion.cfg  .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: pypi_release.yml
sco1_misc/: csv_date_trim.py  prompts.py
tests/: test_csv_date_trim.py
